--- a/style/style.css
+++ b/style/style.css
@@ -197,12 +197,12 @@ nav {
     box-shadow: 0px 0px 19px 0px rgba(0,0,0,0.45);
 
     transition: all .2s;
-    opacity: 0;
-    display: none;
+    width: 100%;
+    overflow: hidden;
 }
 
 .carrossel-item img {
-
+    transition: all .25s;
 }
 
 .carrossel-item p {
@@ -219,7 +219,7 @@ nav {
 }
 
 .opacity {
-    opacity: 1;
+    opacity: 0;
 }
 
 .display {
